--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,7 @@ body::-webkit-scrollbar-thumb:hover {
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
 }
+
 }
 
 .home-container p{
@@ -270,6 +271,19 @@ body::-webkit-scrollbar-thumb:hover {
   .aboutme-container{
       width: 100%;
   }
+
+  .info{
+    list-style: none;
+    margin: 25px 0px 0px;
+    padding: 0px;
+    display: list-item;
+    grid-template-columns: repeat(2, minmax(180px, 240px));
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+  }
+  
 }
 
 
@@ -446,7 +460,7 @@ body::-webkit-scrollbar-thumb:hover {
   padding-top: 1%;
   margin-right: 3%;
   margin-left: 3%;
-
+  line-height: normal;
   list-style: none;
 }
 .dir{
@@ -467,9 +481,12 @@ body::-webkit-scrollbar-thumb:hover {
   display: flex;
   justify-content: center;
   margin-top: 2vh;
+  align-items: center;
+  text-align: center;
 }
 .row li a{
   color: #c00404;
+  text-decoration: none;
 }
 
 
